2017-10-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

 	* base/kb_redis.c (redis_no_empty): Check ret before to free it to
	avoid SIGSEGV.


2017-10-02  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* base/kb.h (kb_operations): Add a function comment about why
	it was written and where it is called from.

	* base/kb_redis.c (redis_no_empty): Add a function comment about why
	it was written and where it is called from.


2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* base/kb.h (kb_operations): Add kb_no_empty.
	(kb_no_empty): New inline function.

	* base/kb_redis.c (redis_no_empty): New function.
	(KBRedisOperations): Add kb_no_empty.

2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29677 with adjustments due to code changes.

	* base/kb_redis.c (redis_delete_all): Ignore SIGPIPE from hiredis in
	case of a socket disconnect.

2017-09-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Add vendor_version(), which should have been added with r29533.

	* nasl/nasl_init.c (libfuncs): Add vendor_version().

	* Changelog: Correct the log entry of 2017-09-08.

2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_tree.c, nasl/nasl_tree.h, nasl/exec.c, nasl/nasl_cert.c,
	nasl/nasl_crypto.c, nasl/nasl_crypto2.c, nasl/nasl_grammar.y,
	nasl/nasl_http.c, nasl/nasl_misc_funcs.c, nasl/nasl_packet_forgery.c,
	nasl/nasl_packet_forgery_v6.c, nasl/nasl_scanner_glue.c,
	nasl/nasl_smb.c, nasl/nasl_socket.c, nasl/nasl_text_utils.c,
	nasl/nasl_var.c, nasl/nasl_wmi.c, nasl/nasl_func.c, nasl/nasl_func.h,
	nasl/nasl_init.c, nasl/nasl_init.h, nasl/nasl_lex_ctxt.h,
	nasl/nasl_misc_funcs.h: Revert r29039, r29040, r29041 and r29042.

2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_grammar.y, nasl/nasl.h, nasl/nasl_global_ctxt.h: Revert
	r29043 and r29044.

2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_global_ctxt.h, nasl/nasl_grammar.y, nasl/nasl_signature.c,