@@ -174,6 +174,7 @@ rm_udp_data (struct arglist *script_infos, int soc)
 
 /*-------------------------------------------------------------------*/
 
+int lowest_socket = 0;
 
 static tree_cell *
 nasl_open_privileged_socket (lex_ctxt * lexic, int proto)
@@ -346,6 +347,8 @@ tryagain:
       break;
     }
 
+  if (lowest_socket == 0)
+    lowest_socket = sock;
   if (proto == IPPROTO_TCP)
     sock = openvas_register_connection (sock, NULL, NULL, OPENVAS_ENCAPS_IP);
 
@@ -475,8 +478,6 @@ nasl_open_sock_tcp (lex_ctxt * lexic)
 {
   return nasl_open_sock_tcp_bufsz (lexic, -1);
 }
-
-int lowest_socket = 0;
 
 /*
  * Opening a UDP socket is a little more tricky, since
